src/app/styles/App.scss
@import "variables";

#root {
    max-width: 1900px;
    width: 100%;
    margin: 0 auto;
    padding: 2rem;
}

.content {
  width:100%;
  display: flex;
  flex-direction: row;
  gap: 30px;
}

.btn {
  margin-top: 20px;
  align-self: end;
}

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
  display: flex;
  min-width: 320px;
  min-height: 100vh;
  background-color: #ffffff;
  color: #213547;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
}

@media screen and (max-width: 650px) {
  #root {
    padding: 0.5rem;
  }
}

@media screen and (max-width: 1500px) {
  .content {
    flex-direction: column;
  }
}

